# fidonext_android

./: .gitignore  .output.txt  AGENTS.md  CONNECTIVITY.md  DEPENDENCY_NOTE.md  MESSAGING_AND_EXAMPLES.md  README.md  REFACTORING_SUMMARY.md  download_libp2p_binary.sh  inspect_image.py  local.properties.example  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/fidonext/messenger/: ILibp2pService.aidl
app/src/main/assets/: bootstrap_nodes.txt
app/src/main/cpp/: CMakeLists.txt  cabi-rust-libp2p.h  libp2p_jni.c
app/src/main/java/com/fidonext/messenger/: ChatActivity.kt  MainActivity.kt
app/src/main/java/com/fidonext/messenger/config/: BootstrapConfig.kt
app/src/main/java/com/fidonext/messenger/data/: Message.kt
app/src/main/java/com/fidonext/messenger/rust/: RustNative.kt
app/src/main/java/com/fidonext/messenger/service/: Libp2pService.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_foreground_inset.xml  ic_splash_foreground_inset.xml  splash_background.xml  splash_icon_transparent.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
examples/python/: ping_standalone_nodes.py  run_local_mesh.sh
rust/: README.md  build.sh
rust/.cargo/: config.toml
rust/examples/cpp/: ping.cpp
rust/examples/python/: Dockerfile
rust/src/: lib.rs
rust/src/messaging/: messaging.rs
rust/src/transport/: libp2p.rs
scripts/: build.sh  commit.sh  download_libcabi_rust_libp2p.sh  run.sh
(+10 files in other folders)
